# mandate-the-sovereign-obligation-os

./: .dockerignore  .gitignore  Dockerfile  FINDINGS.md  Mandate_Guide.docx  Mandate_Pitch.md  README.md  THREAT_MODEL.md  app.py  docker-compose.yml  main.py  mandate_theme.py  pyproject.toml  requirements.txt  scan_tab.py
.streamlit/: config.toml
core/: agents.py  agreement.py  calibration.py  corpus.py  engine.py  extract.py  graph.py  monitoring.py  pack_es.py  pack_eu.py  pack_pt.py  perception.py  pipeline.py  reconciliation.py  redaction.py  resilience.py  scanning.py  security.py  sovereignty.py  statute.py
models/: calibration.json  calibration_perception.json  claims.json  extraction_benchmark.json  judge_agreement.json  judge_summary.json  perception_benchmark.json
runs/: drafts.jsonl  extractions_tier0.jsonl  extractions_tier1.jsonl  extractions_tier2.jsonl  human_labels.jsonl  judgements.jsonl  perception_ocr_clean.jsonl  perception_ocr_fax.jsonl  perception_ocr_photocopy.jsonl  perception_vlm_fax.jsonl
scripts/: benchmark_extraction.py  benchmark_perception.py  calibrate_extraction.py  calibrate_perception.py  judge_drafts.py  label_drafts.py  process_document.py  scorecard.py  verify_drafts.py  verify_sovereignty.py
tests/: test_agreement.py  test_calibration.py  test_corpus.py  test_dependencies.py  test_es_deadlines.py  test_eu_deadlines.py  test_extract.py  test_graph.py  test_hardening.py  test_juxtaposition.py  test_monitoring.py  test_pipeline.py  test_pt_deadlines.py  test_reconciliation.py  test_redaction.py  test_resilience.py  (+5 more)
(+1 files in other folders)
