[project]
name = "mandate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq>=1.5.0",
    "holidays>=0.100",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
]
[tool.pytest.ini_options]
pythonpath = ["core"]
testpaths = ["tests"]
